ass save and edit

--- a/src/assets/style/cmps/AppHeader.css
+++ b/src/assets/style/cmps/AppHeader.css
@@ -2,9 +2,20 @@
   background-color: var(--clr1);
   color: var(--clr1bg);
   padding: 1em;
+ 
 }
 
+.header-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
 
+.logo{
+  color: var(--clr1bg-light);
+  font-size: 1.5rem;
+}
 
 .app-nav {
     display: flex;
