--- a/src/assets/style/cmps/ToyPreview.css
+++ b/src/assets/style/cmps/ToyPreview.css
@@ -1,14 +1,18 @@
-.car-preview {
+.toy-preview {
     text-align: center;
     padding: 0.3em;
     display: flex;
     flex-direction: column;
+    border-radius: 0.5rem;
+    padding: 0.5rem;
+
 }
-.car-preview h4{
+.toy-preview h4{
     text-transform: capitalize;
     color: black;
 }
 
-.car-preview img {
+.toy-preview img {
     max-width: 100px;
+    margin-inline: auto;   
 }
