--- a/src/assets/style/main.css
+++ b/src/assets/style/main.css
@@ -13,14 +13,16 @@
 @import 'cmps/ToggleBtn.css';
 @import 'cmps/UserMsg.css';
 
-@import 'cmps/CarFilter.css';
-@import 'cmps/CarList.css';
-@import 'cmps/CarPreview.css';
+@import 'cmps/ToyFilter.css';
+@import 'cmps/ToyList.css';
+@import 'cmps/ToyPreview.css';
 
 @import 'cmps/ShoppingCart.css';
 
 /* Psges */
 @import 'cmps/home.css';
+@import 'cmps/toy-edit.css';
+
 
 
 
